--- a/src/main/resources/templates/admin/adminDash.html
+++ b/src/main/resources/templates/admin/adminDash.html
@@ -291,8 +291,8 @@
                         <i class="fas fa-map-marker-alt"></i> Booking
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="manageGroundDropdown">
-                        <li><a class="dropdown-item" th:href="@{/admin/coaches}">Today Booking</a></li>
-                        <li><a class="dropdown-item" th:href="@{/admin/ground/viewGrounds}">Booking History</a></li>
+                        <li><a class="dropdown-item" th:href="@{/finance-report}">Today Booking</a></li>
+                        <li><a class="dropdown-item" th:href="@{/finance-report}">Booking History</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/slots/viewSlot}">Account</a></li>
                         
                     </ul>
