--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -183,7 +183,7 @@
   
        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="btn navbar-brand" onclick="redirectToDashboard()">
             <i class="fas fa-futbol brand-icon"></i>
             BookMyTurf
         </a>
@@ -204,7 +204,7 @@
             <ul class="navbar-nav ms-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="<%=TRBView.WELCOME_CTL%>">
+                    <a class="btn nav-link" onclick="redirectToDashboard()">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
@@ -224,7 +224,7 @@
             </ul>
             <ul class="navbar-nav ms-3">
                     <li class="nav-item">
-                        <a class="nav-link" th:hrf="@{/login1}">
+                        <a class="btn nav-link" th:hrf="@{/login1}">
                             <i class="fas fa-sign-in-alt"></i>
                             Sign In
                         </a>
@@ -324,7 +324,12 @@
     </div>
 </footer>
   
-    
+    <script>
+		 function redirectToDashboard() {
+			 window.location.href = '/user/dashboard'; // Match controller's @GetMapping path
+		}
+
+	</script>
 	<script src="dash.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
