--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -33,6 +33,7 @@
             background-color: var(--bg-color);
             min-height: 100vh;
             overflow-x: hidden;
+			transition: all 0.6s ease;
         }
 
         .nav-minimal {
@@ -151,7 +152,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="btn navbar-brand" onclick="redirectToDashboard()">
             <i class="fas fa-futbol brand-icon"></i>
             BookMyTurf
         </a>
@@ -172,7 +173,7 @@
             <ul class="navbar-nav ms-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="<%=TRBView.WELCOME_CTL%>">
+                    <a class="btn nav-link" onclick="redirectToDashboard()">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
@@ -192,13 +193,13 @@
             </ul>
             <ul class="navbar-nav ms-3">
                     <li class="nav-item">
-                        <a class="nav-link" th:hrf="@{/login1}">
+                        <a class="btn nav-link" onclick="redirectToDashboard()">
                             <i class="fas fa-sign-in-alt"></i>
                             Sign In
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  th:href="@{/register1}">
+                        <a class="btn nav-link"  th:href="@{/register1}">
                             <i class="fas fa-user-plus"></i>
                             Sign Up
                         </a>
@@ -319,6 +320,9 @@
                 document.querySelector('.dark-mode-toggle i').className = 'fas fa-sun';
             }
         });
+		 function redirectToDashboard() {
+			 window.location.href = '/user/dashboard'; // Match controller's @GetMapping path
+		}
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
