improve user managment UI and functionaality

--- a/src/main/resources/templates/admin/finance.html
+++ b/src/main/resources/templates/admin/finance.html
@@ -364,7 +364,13 @@
   <!-- Header -->
   <div class="header">
     <h1 class="page-title">Finance Report</h1>
+	<a th:href="@{/admin/dashboard}" class="btn  btn-sm">
+			  <i class="fa-solid fa-house-user"></i>
+			  Home
+			</a>
     <div class="action-buttons">
+		
+
       <button class="btn btn-outline btn-sm">
         <i class="fas fa-print"></i>
         Print
