--- a/src/main/resources/templates/admin/userList.html
+++ b/src/main/resources/templates/admin/userList.html
@@ -138,6 +138,9 @@
                         <button class="btn btn-view" th:onclick="'viewUserDetails(' + ${user.id} + ')'">
                             <i class="fas fa-eye"></i> View
                         </button>
+						<button class="btn btn-booking" th:onclick="'viewUserBookingHistory(' + ${user.id} + ')'">
+								<i class="fas fa-calendar-check"></i> Booking
+						</button>
                         <form th:action="@{/admin/user/{id}/delete(id=${user.id})}"  method="post" th:method="delete">
                             <button class="btn btn-delete" type="submit">
                                 <i class="fas fa-trash-alt"></i> Delete
@@ -165,6 +168,10 @@
                     document.getElementById('userModal').style.display = 'block';
                 });
         }
+		
+		function viewUserBookingHistory(userId) {
+		            window.location.href = `/admin/user/${userId}/bookings`;  // Redirects to user booking page
+		        }
 
         // Close modal
         document.querySelector('.modal-close').addEventListener('click', () => {
