Adding adminfucntionality of See today and all booking

--- a/src/main/resources/templates/admin/adminDash.html
+++ b/src/main/resources/templates/admin/adminDash.html
@@ -291,9 +291,9 @@
                         <i class="fas fa-map-marker-alt"></i> Booking
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="manageGroundDropdown">
-                        <li><a class="dropdown-item" th:href="@{/finance-report}">Today Booking</a></li>
-                        <li><a class="dropdown-item" th:href="@{/finance-report}">Booking History</a></li>
-                        <li><a class="dropdown-item" th:href="@{/admin/slots/viewSlot}">Account</a></li>
+                        <li><a class="dropdown-item" th:href="@{/admin/today}">Today Booking</a></li>
+                        <li><a class="dropdown-item" th:href="@{/admin/bookings}">Booking History</a></li>
+                        <li><a class="dropdown-item" th:href="@{/finance-report}">Account</a></li>
                         
                     </ul>
                 </li>
