--- a/src/main/resources/templates/admin/today_bookings.html
+++ b/src/main/resources/templates/admin/today_bookings.html
@@ -361,7 +361,7 @@
                 <div class="stats-card">
                     <div>
                         <h4>Total Revenue</h4>
-                        <h2 th:text="${#aggregates.sum(bookings.![price])} + ' ₹'">0 ₹</h2>
+						<h2 th:text="${#aggregates.sum(bookings.?[paymentStatus == 'Paid'].![price])} + ' ₹'">0 ₹</h2>
                     </div>
                     <i class="fas fa-money-bill-wave icon"></i>
                 </div>
@@ -370,7 +370,8 @@
                 <div class="stats-card">
                     <div>
                         <h4>Pending Payments</h4>
-                        <h2 th:text="${bookings.?[paymentStatus == 'Pending'].size()}">0</h2>
+						<h2 th:text="${#aggregates.sum(bookings.?[paymentStatus == 'Unpaid'].![price])} + ' ₹'">0 ₹</h2>
+
                     </div>
                     <i class="fas fa-hourglass-half icon"></i>
                 </div>
