--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -732,17 +732,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" th:href="@{/contact}">
                             <i class="fas fa-info-circle"></i>
                             About
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-phone-alt"></i>
-                            Contact
-                        </a>
-                    </li>
+                    
                 </ul>
                 <ul class="navbar-nav ms-3">
                     <li class="nav-item">
