--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -337,17 +337,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" th:href="@{/contact}">
                             <i class="fas fa-info-circle"></i>
                             About
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-phone-alt"></i>
-                            Contact
-                        </a>
-                    </li>
+                   
                 </ul>
                 <ul class="navbar-nav ms-3">
                     <li class="nav-item">
@@ -385,6 +380,10 @@
                         </h2>
                         <p class="mb-0 mt-2">Join BookMyTurf and start booking sports venues today</p>
                     </div>
+					<div th:if="${error}" class="alert alert-danger" role="alert">
+					    <p th:text="${error}"></p>
+					</div>
+
                     
                     <div class="registration-form">
                         <form th:action="@{/register}" method="POST" th:object="${user}">
